--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                   <a href="about.html">About</a> 
                   <div class="rightfloat">
                         <a href="#">Log out</a>
-                        <a href="Login.html">Login</a>
+                        <a href="login.html">Login</a>
                         <a href="Carts.html">Cart</a>
                   </div>
                 </div>
