--- a/products/electronics.html
+++ b/products/electronics.html
@@ -24,7 +24,7 @@
                       <a href="/products/toys.html">Toys</a>
                     </div>
                   </div>
-                  <a href="about.html">About</a> 
+                  <a href="#">About</a> 
                   <div class="rightfloat">
                         <a href="#">Log out</a>
                         <a href="/login.html">Login</a>
