--- a/products/home&.html
+++ b/products/home&.html
@@ -67,7 +67,7 @@
                   <td><input class="buy" type="button" value="ADD TO CART"></td>
 </tr>  
       <tr>
-                  <td><img class="pro" src="/img/home/Mixer.png"></td>
+                  <td><img class="pro" src="/img/home/mixer.png"></td>
                   <td class="name" ><p>Mixer Grinder</p><span style="font-size:100%;color:rgb(0, 0, 0);">&starf;</span>
                         <span style="font-size:100%;color:rgb(0, 0, 0);">&starf;</span>
                         <span style="font-size:100%;color:rgb(0, 0, 0);">&starf;</span>
